[package]
name = "bs-dash"
version = "0.1.0"
authors = ["Jess Balint <jbalint@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "*"
termion = "1"
tui = "0.3.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

http = "*"
reqwest = "0.9.6"

chrono = { version = "0.4", features = ["serde"] }
